<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/linear_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="15dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/author_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="15dp"
                android:text="@string/author"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/quantity_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="15dp"
                android:text="@string/quantity"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/price_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="20dp"
                android:text="@string/price"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/supplier_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="18dp"
                android:text="@string/supplier"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_number_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="18dp"

                android:text="@string/phone"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/insert_title"
                android:inputType="textCapWords"
                android:padding="15dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/insert_author"
                android:inputType="textCapWords"
                android:padding="15dp"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/increment"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_style"
                    android:text="@string/plus_sign"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/default_zero"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/decrement"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_style"
                    android:text="@string/minus_sign"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/insert_price"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/insert_name"
                android:inputType="textCapWords"
                android:padding="15dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/insert_phone"
                android:inputType="phone"
                android:padding="15dp"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@drawable/ordernow_button"
        android:text="@string/order_now"
        android:textColor="@color/white" />

</RelativeLayout>

